2007-03-12  Mark Mitchell  <mark@codesourcery.com>

	* cppdefault.c (cpp_EXEC_PREFIX): New variable.
	* cppdefault.h (cpp_PREFIX): Document.
	(cpp_PREFIX_len): Likewise.
	(cpp_EXEC_PREFIX): New variable.
	* Makefile.in (PREPROCESSOR_DEFINES): Add STANDARD_EXEC_PREFIX.
	* c-incpath.c (add_standard_paths): Correct logic for relocating
	paths within prefix.

2007-03-12  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (fixuns_trunc<mode>hi2): Implement from
	fixuns_truncsfhi2 and fixuns_truncdfhi2 using SSEMODEF
	mode macro.
	(fix_trunc<mode>di_sse): Implement from fix_truncsfdi_sse and
	fix_truncdfdi_sse using SSEMODEF mode macro.
	(fix_trunc<mode>si_sse): Implement from fix_truncsfsi_sse and
	fix_truncdfsi_sse using SSEMODEF mode macro.
	(fix_trunc?f?i_sse peephole2): Implement using SSEMODEF mode macro.
	(fix_trunc?f?i_sse K8 peephole2): Fix register constraint.

2007-03-12  Richard Sandiford  <richard@codesourcery.com>

	* config.gcc (i[4567]86-wrs-vxworks, i[4567]86-wrs-vxworksae): Add
	elfos.h to tm_file.

2007-03-12  Olga Golovanevsky  <olga@il.ibm.com>
  
  	* tree.h : Add multiple_of_p declaration.
  	* fold-const.c (multiple_of_p): Make multiple_of_p public. 
  	* ipa-type-escape.c (results_of_malloc): Redundant.
  	(visited_stmts): New. Visited stmt for walk_use_def_chains.
  	(cast_type): Extended with new members.
  	(check_cast): Returns cast_type.
  	(cast): New structure for data of walk_use_def_chains.
  	(is_malloc_result, is_cast_from_non_pointer_1,
  	is_cast_from_non_pointer, 
  	is_array_access_through_pointer_and_index): New functions.
  	(look_for_casts): Returns cast types.
 	(check_call): Returns void.
  	(okay_pointer_operation): Use support of pointer plus index,
  	pointer plus constant and allow all multiplications.
	
2007-03-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/31115
	* tree-vrp.c (extract_range_from_binary_expr): Make sure
	the shift count is positive and non-anti-range for RSHIFT_EXPR.