@@ -1,3 +1,9 @@
+2007-03-12  Richard Henderson  <rth@redhat.com>
+
+        * config/darwin.c (machopic_reloc_rw_mask): New.
+        * config/darwin-protos.h (machopic_reloc_rw_mask): Declare.
+        * config/darwin.h (TARGET_ASM_RELOC_RW_MASK): New.
+
 2007-03-12  Mark Mitchell  <mark@codesourcery.com>
 
 	* cppdefault.c (cpp_EXEC_PREFIX): New variable.
